fix(control-bar): make vertical alignment of slider handles more consistent (#7990)
Fixes #7989

BREAKING CHANGE: This changes how slider handles are styled, so custom skins that are targeting them may need to change.

--- a/src/css/components/_volume.scss
+++ b/src/css/components/_volume.scss
@@ -139,7 +139,7 @@
 
   // Volume handle
   &:before {
-    top: -0.3em;
+    line-height: .35em;
     right: -0.5em;
   }
 }
